# luna

./: .gitignore  .rules  CLAUDE.md  Cargo.toml  README.md  REFACTORING_PLAN.md  plan.md  todo.md
.claude/skills/: spool.md
.spool/: version.json
.spool/events/: 2026-01-18.jsonl  2026-01-19.jsonl  2026-01-20.jsonl  2026-01-21.jsonl  2026-01-22.jsonl  2026-01-23.jsonl  2026-01-25.jsonl  2026-01-26.jsonl
.zed/: debug.json
archive/: Cargo.toml
archive/crates/canvas/: Cargo.toml
archive/crates/canvas/src/: canvas_element.rs  css_parser.rs  tools.rs
archive/crates/common/: Cargo.toml
archive/crates/common/src/: common.rs  interactivity.rs  util.rs
archive/crates/node/src/: shape.rs
archive/crates/project/: Cargo.toml
archive/crates/scene_graph/src/: scene_graph.rs
archive/crates/ui/: Cargo.toml
archive/crates/ui/src/: inspector.rs
archive/src/: layer_list.rs
assets/css/: buttons.css  sample_nodes.css
assets/test/nodes/: single_element.json
crates/api/: Cargo.toml
crates/api/src/: command.rs  executor.rs  lib.rs  query.rs  server.rs  target.rs
crates/assets/: Cargo.toml
crates/assets/assets/css/: buttons.css  sample_nodes.css
crates/assets/src/: assets.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: canvas.rs  canvas_element.rs  css_parser.rs  element.rs  lib.rs  tools.rs  viewport.rs
crates/canvas_2/: Cargo.toml
crates/canvas_2/src/: canvas.rs  element.rs  lib.rs  viewport.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/src/: bounds.rs  color.rs  core.rs  interactivity.rs  test.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  coordinates.rs  keymap.rs  luna_core.rs  util.rs
crates/interchange/: Cargo.toml
crates/interchange/src/: lib.rs  project.rs
crates/luna/: Cargo.toml  README.md
crates/luna/src/: assets.rs  canvas.rs  canvas_element.rs  css_parser.rs  element.rs  frame.rs  keymap.rs  luna.rs  luna_2.rs  project.rs  scene_graph.rs  serialization.rs  theme.rs  titlebar.rs
crates/luna/src/node/: frame.rs
crates/luna/src/ui/: inspector.rs  sidebar.rs
crates/luna_core/: Cargo.toml
crates/luna_core/src/: bounds.rs  color.rs  coordinates.rs  interactivity.rs  luna_core.rs  transform.rs
crates/node/: Cargo.toml
crates/node/src/: frame.rs  layout.rs  layout_engine.rs  lib.rs  node.rs
crates/node_2/: Cargo.toml
crates/node_2/src/: coords.rs  layout.rs  layout_engine.rs  lib.rs  shape.rs  shape_id.rs
crates/project/: Cargo.toml
crates/project/src/: project.rs
crates/scene_graph/: Cargo.toml
crates/scene_graph/src/: scene_graph.rs  scene_node.rs
crates/theme/: Cargo.toml
crates/theme/src/: theme.rs
crates/theme_2/: Cargo.toml
crates/theme_2/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  inspector.rs  layer_list.rs  properties.rs  property.rs  property2.rs  sidebar.rs  tool_rail.rs  ui.rs
crates/ui/src/input/: bindings.rs  mod.rs
crates/ui_2/: Cargo.toml
crates/ui_2/src/: components.rs  layer_list.rs  lib.rs  properties.rs  tool_rail.rs
crates/ui_2/src/input/: bidi.rs  blink.rs  element.rs  handler.rs  mod.rs  state.rs
docs/: interchange-format.md  mvp.md
process/: edit_process.md  update_comments.md
prompts/: about  style_guide.md  update_comments.md
scripts/: cli-demo.sh  frame_demo.sh
scripts/cli/: autolayout.sh  basic.sh  frames.sh
src/: assets.rs  canvas.rs  canvas_element.rs  color.rs  coordinates.rs  css_parser.rs  ecs.rs  element.rs  geometry.rs  input.rs  interactivity.rs  logger.rs  luna.rs  node.rs  prelude.rs  scene_graph.rs  scene_graph_2.rs  scene_graph_2_test.rs  scene_graph_plan.md  scene_node.rs  sidebar.rs  theme.rs  tools.rs  typography.rs  ui.rs  util.rs
src/components/: hierarchy.rs  layout.rs  mod.rs  render.rs  transform.rs
src/input/: input_map.rs  text_input.rs
src/luna2/: .gitignore
src/luna2/src/: geometry.rs  luna2.rs
src/node/: frame.rs  image.rs  importer.rs  schema.rs  text.rs
src/sidebar/: inspector.rs
src/systems/: hit_test.rs  layout.rs  mod.rs  quad_tree.rs  spatial.rs  transform.rs
src/tests/: canvas_coordinates_test.rs  mod.rs
src/ui/: inspector.rs  layer_list.rs  layer_list.rs.new  property.rs  sidebar.rs
