[package]
name = "luna"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "Luna"
path = "src/luna.rs"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ['test-support']}
anyhow = "1.0.97"
schemars = "0.8.22"
schemars_derive = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smallvec = "1.14.0"
uuid = { version ="1.16.0", features = ["v4"] }
strum = { version = "0.24", features = ["derive", "strum_macros"] }
strum_macros = "0.24"
palette = "0.7.6"
taffy = "=0.4.4"
rand = "0.9.0"
slotmap = "1.0.7"
quadtree_rs = "0.1.3"
