[workspace]
members = [
    "crates/luna_core",
    "crates/node",
    "crates/luna",
    "crates/theme",
    "crates/ui",
    "crates/canvas",
    "crates/scene_graph",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0.97"
glam = { version = "0.30.5", features = ["serde"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "c04c5812b6295ab683fbf1900499330cbc2b3058", features = [
    'test-support',
] }
palette = "0.7.6"
quadtree_rs = "0.1.3"
rand = "0.9.0"
regex = "1.11.1"
schemars = "0.8.22"
schemars_derive = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplecss = "0.2.2"
slotmap = "1.0.7"
smallvec = "1.14.0"
strum = { version = "0.24", features = ["derive", "strum_macros"] }
strum_macros = "0.24"
taffy = "=0.4.4"
uuid = { version = "1.16.0", features = ["v4"] }
