[workspace]
members = [
    "crates/assets",
    "crates/common",
    "crates/node",
    "crates/node_2",
    "crates/luna",
    "crates/theme",
    "crates/theme_2",
    "crates/ui",
    "crates/ui_2",
    "crates/canvas",
    "crates/canvas_2",
    "crates/scene_graph",
    "crates/project",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "=1.0.97"
chrono = "=0.4"
glam = { version = "=0.30.5", features = ["serde"] }
gpui = { version = "=0.2.2", features = ["test-support", "inspector"] }
palette = "=0.7.6"
quadtree_rs = "=0.1.3"
rand = "=0.9.0"
regex = "=1.11.1"
rust-embed = "=8.5.0"
schemars = "=0.8.22"
schemars_derive = "=0.8.22"
serde = { version = "=1.0.221", features = ["derive"] }
serde_json = "=1.0.145"
simplecss = "=0.2.2"
spool = "=0.3.0"
slotmap = "=1.0.7"
smallvec = "=1.14.0"
smol = "=2.0"
strum = { version = "=0.24", features = ["derive", "strum_macros"] }
strum_macros = "=0.24"
taffy = "=0.4.4"
unicode-bidi = "=0.3.17"
unicode-segmentation = "=1.12.0"
uuid = { version = "=1.16.0", features = ["v4"] }
