[package]
name = "luna-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "luna"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
anyhow.workspace = true
clap.workspace = true
glam.workspace = true
node_2 = { path = "../node_2" }
serde.workspace = true
serde_json.workspace = true
