[package]
name = "core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "core"
path = "src/core.rs"

[dependencies]
glam = { workspace = true }
gpui = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
