[package]
name = "luna"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "Luna"
path = "src/luna.rs"

[dependencies]
anyhow = { workspace = true }
assets = { path = "../assets" }
canvas = { path = "../canvas" }
chrono = { workspace = true }
common = { path = "../common" }
glam = { workspace = true }
gpui = { workspace = true }
node = { path = "../node" }
palette = { workspace = true }
project = { path = "../project" }
quadtree_rs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scene_graph = { path = "../scene_graph" }
schemars = { workspace = true }
schemars_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplecss = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
taffy = { workspace = true }
theme = { path = "../theme" }
ui = { path = "../ui" }
uuid = { workspace = true }
