[package]
name = "luna"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "Luna"
path = "src/luna.rs"

[[bin]]
name = "Luna2"
path = "src/luna_2.rs"

[dependencies]
anyhow = { workspace = true }
assets = { path = "../assets" }
canvas = { path = "../canvas" }
canvas_2 = { path = "../canvas_2" }
chrono = { workspace = true }
common = { path = "../common" }
glam = { workspace = true }
gpui = { workspace = true }
node = { path = "../node" }
node_2 = { path = "../node_2" }
palette = { workspace = true }
project = { path = "../project" }
quadtree_rs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
scene_graph = { path = "../scene_graph" }
schemars = { workspace = true }
schemars_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplecss = { workspace = true }
spool = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
smol = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
taffy = { workspace = true }
theme = { path = "../theme" }
theme_2 = { path = "../theme_2" }
ui = { path = "../ui" }
uuid = { workspace = true }
