[package]
name = "luna"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "Luna"
path = "src/luna.rs"

[dependencies]
anyhow = { workspace = true }
api = { path = "../api" }
assets = { path = "../assets" }
canvas = { path = "../canvas" }
interchange = { path = "../interchange" }
glam = { workspace = true }
gpui = { workspace = true }
node = { path = "../node" }
serde = { workspace = true }
serde_json = { workspace = true }
theme = { path = "../theme" }
ui = { path = "../ui" }
uuid = { workspace = true }
