[package]
name = "project"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "project"
path = "src/project.rs"

[dependencies]
gpui = { workspace = true }
node = { path = "../node" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
smol = { workspace = true }
