[package]
name = "scene_graph"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "scene_graph"
path = "src/scene_graph.rs"

[dependencies]
core = { path = "../core" }
glam = { workspace = true }
gpui = { workspace = true }
node = { path = "../node" }
slotmap = { workspace = true }
