[package]
name = "ui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
canvas = { path = "../canvas" }
core = { path = "../core" }
gpui = { workspace = true }
node = { path = "../node" }
project = { path = "../project" }
regex = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
theme = { path = "../theme" }
