[package]
name = "common"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "common"
path = "src/common.rs"

[dependencies]
glam = { workspace = true }
gpui = { workspace = true }
palette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
