[package]
name = "project"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "project"
path = "src/project.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
gpui = { workspace = true }
node = { path = "../node" }
serde = { workspace = true }
serde_json = { workspace = true }
smol = { workspace = true }
uuid = { workspace = true }
